--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,5 +26,10 @@
             android:name=".activities.LicenseActivity"
             android:label="@string/third_party_licences"
             android:parentActivityName=".activities.AboutActivity"/>
+
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/settings"
+            android:parentActivityName=".activities.MainActivity"/>
     </application>
 </manifest>
