--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,26 +39,11 @@ android {
 }
 
 dependencies {
-    compile 'com.simplemobiletools:commons:2.38.8'
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.simplemobiletools:commons:3.0.3'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
 
-buildscript {
-    ext.kotlin_version = '1.1.51'
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-    }
-}
-
-def Properties props = new Properties()
+Properties props = new Properties()
 def propFile = new File('signing.properties')
 if (propFile.canRead()) {
     props.load(new FileInputStream(propFile))
