--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.simplemobiletools.applauncher">
+    package="com.simplemobiletools.applauncher"
+    android:installLocation="auto">
 
     <uses-permission
         android:name="android.permission.USE_FINGERPRINT"
