--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     implementation 'com.simplemobiletools:commons:3.0.3'
     implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.android.support:multidex:1.0.2'
 }
 
 Properties props = new Properties()
