--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,5 +49,10 @@
             android:label="@string/customize_colors"
             android:parentActivityName=".activities.SettingsActivity"/>
 
+        <activity
+            android:name="com.simplemobiletools.commons.activities.FAQActivity"
+            android:label="@string/frequently_asked_questions"
+            android:parentActivityName="com.simplemobiletools.commons.activities.AboutActivity"/>
+
     </application>
 </manifest>
