--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.simplemobiletools.applauncher"
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 15
         versionName "4.1.1"
         multiDexEnabled true
@@ -42,9 +42,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:4.6.7'
+    implementation 'com.simplemobiletools:commons:5.0.18'
     implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
 }
 
 Properties props = new Properties()
