--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,12 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.simplemobiletools.applauncher"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 25
         versionName "5.2.0"
         multiDexEnabled true
@@ -57,7 +56,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.28.23'
+    implementation 'com.simplemobiletools:commons:5.30.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
