--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <uses-feature
         android:name="android.hardware.faketouch"
-        tools:node="remove" />
+        android:required="false" />
 
     <uses-feature
         android:name="android.hardware.screen.portrait"
