--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:name="android.permission.USE_FINGERPRINT"
         tools:node="remove"/>
 
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+
     <uses-feature
         android:name="android.hardware.faketouch"
         android:required="false" />
