--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.34.24'
+    implementation 'com.github.SimpleMobileTools:Simple-Commons:30d1713c6f'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
